change name for classes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta title="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,170 +21,176 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <section class="cards">
-      <div class="card">
-        <h4 class="card__name">Basic</h4>
-        <span class="card__kind">Website</span>
-        <h3 class="card__price card__price_green">99€</h3>
-        <p class="card__descr">
+    <section class="price-cards">
+      <div class="price-card">
+        <h4 class="price-card__title">Basic</h4>
+        <span class="price-card__kind">Website</span>
+        <h3 class="price-card__price price-card__price_green">99€</h3>
+        <p class="price-card__description">
           Simple website made in the world's most popular CMS system, Wordpress.
         </p>
-        <ul class="card__list">
-          <li class="card__list-item">
+        <ul class="price-card__option-list">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />Website in WordPress
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />3 sub pages
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />Theme customized
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />Help and guidance
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />System introduction
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />2 weeks free support
           </li>
         </ul>
-        <button class="card__button card__button_green">ORDER NOW</button>
+        <button class="price-card__order-btn price-card__order-btn_green">
+          ORDER NOW
+        </button>
       </div>
-      <div class="card">
-        <div class="label card__label">
-          <span class="card__label-popular"> POPULAR</span>
+      <div class="price-card">
+        <div class="label price-card__label">
+          <span class="price-card__label-popular"> POPULAR</span>
         </div>
-        <h4 class="card__name">Business</h4>
-        <span class="card__kind">Website</span>
-        <h3 class="card__price card__price_blue">299€</h3>
-        <p class="card__descr">
+        <h4 class="price-card__title">Business</h4>
+        <span class="price-card__kind">Website</span>
+        <h3 class="price-card__price price-card__price_blue">299€</h3>
+        <p class="price-card__description">
           Advanced website made in the world's most popular CMS system,
           Wordpress.
         </p>
-        <ul class="card__list">
-          <li class="card__list-item">
+        <ul class="price-card__option-list">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />Website in WordPress
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />3 sub pages
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />Theme customized
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />Help and guidance
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />System introduction
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />2 weeks free support
           </li>
         </ul>
-        <button class="card__button card__button_blue">ORDER NOW</button>
+        <button class="price-card__order-btn price-card__order-btn_blue">
+          ORDER NOW
+        </button>
       </div>
-      <div class="card">
-        <h4 class="card__name">Webshop</h4>
-        <span class="card__kind">Website</span>
-        <h3 class="card__price card__price_orange">599€</h3>
-        <p class="card__descr">
+      <div class="price-card">
+        <h4 class="price-card__title">Webshop</h4>
+        <span class="price-card__kind">Website</span>
+        <h3 class="price-card__price price-card__price_orange">599€</h3>
+        <p class="price-card__description">
           Your very own webshop made the world's most popular CMS system,
           Wordpress.
         </p>
-        <ul class="card__list">
-          <li class="card__list-item">
+        <ul class="price-card__option-list">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />Website in WordPress
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />3 sub pages
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />Theme customized
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />Help and guidance
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />System introduction
           </li>
-          <li class="card__list-item">
+          <li class="price-card__option-list-item">
             <img
-              class="card__list-item-mark"
+              class="price-card__option-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />2 weeks free support
           </li>
         </ul>
-        <button class="card__button card__button_orange">ORDER NOW</button>
+        <button class="price-card__order-btn price-card__order-btn_orange">
+          ORDER NOW
+        </button>
       </div>
     </section>
   </body>
