change name for list

--- a/index.html
+++ b/index.html
@@ -29,45 +29,45 @@
         <p class="price-card__description">
           Simple website made in the world's most popular CMS system, Wordpress.
         </p>
-        <ul class="price-card__option-list">
-          <li class="price-card__option-list-item">
+        <ul class="price-card__options-list">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />Website in WordPress
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />3 sub pages
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />Theme customized
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />Help and guidance
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />System introduction
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
               alt="mark"
             />2 weeks free support
@@ -88,45 +88,45 @@
           Advanced website made in the world's most popular CMS system,
           Wordpress.
         </p>
-        <ul class="price-card__option-list">
-          <li class="price-card__option-list-item">
+        <ul class="price-card__options-list">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />Website in WordPress
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />3 sub pages
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />Theme customized
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />Help and guidance
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />System introduction
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
               alt="mark"
             />2 weeks free support
@@ -144,45 +144,45 @@
           Your very own webshop made the world's most popular CMS system,
           Wordpress.
         </p>
-        <ul class="price-card__option-list">
-          <li class="price-card__option-list-item">
+        <ul class="price-card__options-list">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />Website in WordPress
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />3 sub pages
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />Theme customized
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />Help and guidance
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />System introduction
           </li>
-          <li class="price-card__option-list-item">
+          <li class="price-card__options-list-item">
             <img
-              class="price-card__option-list-item-mark"
+              class="price-card__options-list-item-mark"
               src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
               alt="mark"
             />2 weeks free support
